# hakoniwa-mujoco-robots

./: .gitignore  README-ja.md  README.md  tb3-demo-launch-win.json  tb3-demo-launch.json  tb3-demo.bash
config/: camera-pdudef-compact.json  camera-pdutypes.json  joint-actuator-pdudef-compact.json  joint-actuator-pdutypes.json  tb3-camera-pdutypes.json  tb3-pdudef-compact.json  ultrasonic-pdudef-compact.json  ultrasonic-pdutypes.json
config/actuator/joint/: sample_joint_actuator.json  sample_position_actuator.json  sample_velocity_actuator.json  tb3_left_wheel.json  tb3_right_wheel.json
config/actuator/schema/: joint-actuator.schema.json
config/assets/: tb3-hakoniwa-asset.json  ultrasonic-hakoniwa-asset.json
config/assets/schema/: hakoniwa-asset-manifest.schema.json
config/endpoint/: camera_endpoint.json  joint_actuator_endpoint.json  ultrasonic_endpoint.json
config/endpoint/comm/: shm_camera_comm.json  shm_joint_actuator_comm.json  shm_sim_comm.json  shm_ultrasonic_comm.json
config/sensors/color_camera/: simple-color-camera.json  tb3-color-camera-320x240.json
config/sensors/imu/: tb3-imu.json
config/sensors/joint_state/: joint-actuator-joint-states.json  tb3-wheel-joint-states.json
config/sensors/lidar/: lds-01.json  lds-02.json  urg-04lx-ug01.json
config/sensors/odometry/: tb3-ground-truth-odom.json
config/sensors/schema/: camera.schema.json  component-common.schema.json  imu-output.schema.json  joint-state-output.schema.json  lidar-2d.schema.json  multicamera.schema.json  odometry-output.schema.json  tf-output.schema.json  ultrasonic.schema.json
config/sensors/tf/: tb3-basic-tf.json
config/sensors/ultrasonic/: lego-spike-distance-sensor.json
docs/: README.md
docs/guide/: forklift-context-rd-ja.md  forklift-context-rd.md  json-config-ja.md  json-config.md  mjcf-json-authoring-ja.md  mjcf-json-authoring.md  sensor-actuator-user-ja.md  sensor-actuator-user.md
docs/spec/: sensor-actuator-config-schema.md  sensor-actuator-design.md
docs/spec/sensors/: ultrasonic.md
docs/tutorial/: camera-sensor-hakoniwa-ja.md  camera-sensor-ja.md  joint-actuator-hakoniwa-ja.md  joint-actuator-ja.md  ultrasonic-sensor-hakoniwa-ja.md  ultrasonic-sensor-ja.md
examples/: README.md
examples/actuators/: README.md
examples/actuators/joint/: CMakeLists.txt  README.md  joint-actuator-example.cpp  joint-actuator-hakoniwa-asset.cpp  joint_actuator_sender.py
examples/sensors/: README.md
examples/sensors/color_camera/: CMakeLists.txt  README.md  color-camera-example.cpp  color-camera-hakoniwa-asset.cpp  read_camera.py
examples/sensors/color_camera/support/: color_camera_example_support.cpp  color_camera_example_support.hpp
examples/sensors/ultrasonic/: CMakeLists.txt  README.md  read_range.py  ultrasonic-example.cpp  ultrasonic-hakoniwa-asset.cpp
examples/sensors/ultrasonic/support/: ultrasonic_example_support.cpp
include/: actuator.hpp
include/config/: asset_manifest.hpp  json_config_utils.hpp
include/hakoniwa/pdu/adapter/geometry_msgs/: twist.hpp
include/hakoniwa/pdu/adapter/hako_msgs/: game_controller_operation.hpp
include/hakoniwa/pdu/adapter/nav_msgs/: odometry.hpp
include/hakoniwa/pdu/adapter/sensor_msgs/: camera_info.hpp  image.hpp  imu.hpp  joint_state.hpp  laser_scan.hpp  range.hpp
include/hakoniwa/pdu/adapter/std_msgs/: color_rgba.hpp  float64.hpp
include/hakoniwa/pdu/adapter/tf2_msgs/: tf_message.hpp
include/hakoniwa/pdu/converter/std_msgs/: float64.hpp
include/robots/spikehat/: spikehat_sim.h
include/robots/tb3/: tb3_drive.hpp  tb3_hakoniwa_adapter.hpp  tb3_robot.hpp  tb3_runtime_config_loader.hpp
include/runtime/: hakoniwa_asset_lifecycle.hpp
include/sensors/camera/: camera_config_loader.hpp  camera_sensor.hpp  mujoco_camera_renderer.hpp
include/sensors/lidar/: lidar_2d_sensor.hpp
include/sensors/ultrasonic/: ultrasonic_sensor.hpp
include/viewer/: mujoco_viewer.hpp
models/spikehat/: sonar_radar.xml  test_color_sensor.xml
models/spikehat/meshes/: bevel_gear_12.stl  bevel_gear_36.stl  color_sensor.stl  obstacle_wall_a.stl  obstacle_wall_b.stl  radar_base_blue.stl  radar_base_red.stl  sonar_sensor.stl
models/tb3/: turtlebot3_burger_world.xml
python/spikehat/sonar_radar/: sonar_plot.py  sonar_radar.py  sonar_radar_sim.py  spikehat.py
src/: CMakeLists.txt
src/actuator/: joint_actuator_impl.hpp
src/config/: asset_manifest.cpp
src/main_for_sample/drone_ball/: main.cpp
src/main_for_sample/forklift/: forklift_unit_app.cpp  main.cpp
src/main_for_sample/spikehat/: CMakeLists.txt  example_world.hpp  main.cpp  sim_spikehat.c
src/main_for_sample/tb3/: CMakeLists.txt  main.cpp
src/mujoco-common/: mujoco_viewer.cpp  mujoco_viewer.hpp
src/robots/tb3/: tb3_drive.cpp  tb3_hakoniwa_adapter.cpp  tb3_robot.cpp  tb3_runtime_config_loader.cpp
src/runtime/: hakoniwa_asset_lifecycle.cpp
src/sensors/: CMakeLists.txt
src/sensors/camera/: camera_config_loader.cpp  camera_sensor.cpp  depth_camera_sensor.cpp  mujoco_camera_renderer.cpp  rgbd_camera_sensor.cpp  stereo_camera_sensor.cpp  world_viewer_camera_renderer.cpp
src/sensors/imu/: imu_sensor.cpp
src/sensors/joint_state/: joint_state_sensor.cpp
src/sensors/lidar/: lidar_2d_sensor.cpp
src/sensors/odometry/: odometry_sensor.cpp
src/sensors/tf/: tf_publisher.cpp
src/sensors/ultrasonic/: ultrasonic_sensor.cpp
tests/sensors/camera/smoke/: depth_render_smoke_test.cpp
tests/sensors/camera/unit/: camera_config_loader_test.cpp  camera_rgba_color_test.cpp
tests/sensors/ultrasonic/unit/: ultrasonic_config_loader_test.cpp
tools/: inspect_asset_manifest.py  validate_assets.py
